# PulsePlay-Hybrid-Music-Recommendation-System

./: .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  dockerfile  dvc.yaml  pyproject.toml  setup.py  test-app.py
.dvc/: config
.github/workflows/: CI-CD.yaml
Script/: evaluate.py  hybrid_recommendation.py  recommender_script.py  test_hybrid.py
backend/: main.py
backend/api/: routes_auth.py  routes_health.py  routes_recommendation.py  routes_root.py
backend/core/: config.py  database.py  dependencies.py  helpers.py  rate_limiter.py
backend/db/: refresh_token.py
backend/loader/: asset_loader.py
backend/logging_fastapi/: logger_api.py
backend/schema/: recommendation.py
backend/static/: app.js  style.css
backend/templates/: dashboard.html  index.html  login.html  signup.html  templates.html
data/cleaned/: .gitignore
data/processed/: .gitignore
data/raw/: songs-info.csv.dvc  user-info.csv.dvc
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
notebooks/: Collaborative-Filtering.ipynb  Content-Based-Filtering.ipynb  EDA.ipynb  Get-data.ipynb
src/collaborative_filtering/: collaborative_recommendation.py
src/content_based_filtering/: content_filtering.py
src/data/: data_cleaning.py
src/transformation/: transform_filtered_data.py
src/utils/: logger.py
tests/: conftest.py
tests/api/integration/: conftest.py  test_auth_flow.py  test_health_and_public.py  test_recommend_flow.py
tests/api/unit/: conftest.py  test_auth_routes.py  (+1 more)
tests/recommendation-engine/: test_recommendation_engine.py
