[project]
name = "PulsePlay-Hybrid-Music-Recommendation-System"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"

# ONLY API + INFERENCE DEPENDENCIES
dependencies = [
  "matplotlib",
  "seaborn",
  "missingno",
  "plotly",
  "nbformat>=4.2.0",
  "ipykernel>=7.2.0",
  "scikit-learn",
  "category_encoders",
  "dask[dataframe]",
  "jinja2>=3.1.6",
  "graphviz>=0.21",
  "streamlit>=1.58.0",
  "dvc[s3]>=3.67.1",
  "awscli>=1.45.0",
]

# OPTIONAL GROUPS FOR TRAINING / PIPELINES
[project.optional-dependencies]

Hptuning = [
  "optuna",
]

pipeline = [
  "dvc>=3.0",
  "dvc[s3]",
  "awscli",
]

dev = [
  "matplotlib",
  "seaborn",
  "missingno",
  "plotly",
  "kagglehub",
  "nbformat>=4.2.0",
  "ipykernel>=7.2.0",
]

test = [
  "coverage",
  "httpx",
  "pytest",
  "pytest-asyncio",
  "ruff",
  "ty",
  "ipdb",
]

[project.urls]
bugs = "https://github.com/AvanindraBose/PulsePlay-Hybrid-Music-Recommendation-System/issues"
homepage = "https://github.com/AvanindraBose/PulsePlay-Hybrid-Music-Recommendation-System"

[project.scripts]
Subscribly = "Subscribly.cli:app"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.uv]
package = true
